--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,14 @@
     -webkit-user-select: none;
 }
 
+.border-primary-700 {
+    border-color: #1d4ed8;
+}
+
+.text-primary-700 {
+    color: #1d4ed8;
+}
+
 * {
     scroll-behavior: smooth;
     transition: background 0.5s ease;
